--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="close_app">Close app</string>
     <string name="choose_language">Choose language</string>
     <string name="n_lessons">{n_lessons} lessons</string>
+    <string name="choose_topic">Choose a topic</string>
+    <string name="java_introduction_name">Introduction to syntax</string>
+    <string name="java_introduction_description">Understanding the syntax</string>
+    <string name="java_comments_name">Comments</string>
+    <string name="java_comments_description">How to write comments and why</string>
 </resources>
