--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -11,4 +11,12 @@
     <string name="java_introduction_description">Imparare la sintassi</string>
     <string name="java_comments_name">Commenti</string>
     <string name="java_comments_description">Come scrivere i commenti e perché farlo</string>
+    <string name="java_vars_name">Variabili e tipi di dati</string>
+    <string name="java_vars_description">Imparare a dichiarare le variabili</string>
+    <string name="java_casting_name">Casting</string>
+    <string name="java_casting_description">Assegnare valori a dati di diverso tipo</string>
+    <string name="java_strings_name">Stringhe</string>
+    <string name="java_strings_description">Come memorizzare del testo</string>
+    <string name="java_ifelse_name">Strutture if e else</string>
+    <string name="java_ifelse_description">Condizioni logiche</string>
 </resources>
