--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="start_learning">Start learning</string>
     <string name="quizzes">Quizzes</string>
     <string name="close_app">Close app</string>
+    <string name="note">Note:</string>
     <string name="choose_language">Choose language</string>
     <string name="n_lessons">{n_lessons} lessons</string>
     <string name="choose_topic">Choose a topic</string>
@@ -26,4 +27,7 @@
     <string name="java_array_description">Multiple values in a single variable</string>
     <string name="java_clob_name">Classes and objects</string>
     <string name="java_clob_description">Understanding the OOP</string>
+    <string name="java_introduction_t1">Every line of code that runs in Java must be inside a <b>class</b>, which represents a single concept.\n\nThe name of the Java file must match the class name and should start with an <b>uppercase letter</b>.\nThe main method contains the first instructions of our program, you will understand the keywords before and after main later.\n\nThe <b>println method</b> takes a string as a parameter and prints it in your console. Here it is an example on how to write an "hello world" program.</string>
+    <string name="java_introduction_t2">\n<b>Note</b>: The curly braces marks the beginning and the end of a block of code.\n<b>Note</b>: Each code statement must end with a semicolon.
+</string>
 </resources>
