--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,12 @@
     <string name="choose_language">Choose language</string>
     <string name="n_lessons">{n_lessons} lessons</string>
     <string name="choose_topic">Choose a topic</string>
+    <string name="correct_answer">Correct answer!</string>
+    <string name="wrong_answer">Wrong answer!</string>
+    <string name="summary">Summary</string>
+    <string name="wrong_answer_desc">Correct answer: {answer}</string>
+    <string name="correct_answer_desc">Correct answer!</string>
+    <string name="next_question">Next question</string>
     <string name="java_introduction_name">Introduction to syntax</string>
     <string name="java_introduction_description">Understanding the syntax</string>
     <string name="java_comments_name">Comments</string>
